# hnote

./: .gitignore  Cargo.toml  GIT_WORKFLOW_GUIDE.md  NESTED_CALLS_GUIDE.md  README.md  USER_GUIDE.md  calllist.jsonc  measures.json  my_calllist2.jsonc  my_measures_new2.json  prechildren_library.json  tree_output.txt
src/: csv_manager.rs  main.rs  measurestructs.rs  midi_manager.rs  song_generator.rs  types.rs
