[package]
name = "hello-rust"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
windows = { version = "0.58", features = ["Win32_System_Performance","Win32_System_Threading"] }


midir = "0.8.0"
csv = "1.1"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
ndarray-csv = "0.4.1"
ndarray = "0.13.1"
rand = "0.8.4"
unicode-width = "0.1"